manifest/authentik.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik
  template:
    metadata:
      labels:
        app: authentik
    spec:
      containers:
        - name: authentik
          image: ghcr.io/goauthentik/server:latest
          volumeMounts:
            - mountPath: "/media"
              name: media-storage
          readinessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: authentik-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: authentik-service
spec:
  selector:
    app: authentik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-service
            port:
              number: 80
